tests/repositories/snapshots/meson_cpp/tests/Meson_project.cpp.snap
---
source: tests/common/mod.rs
expression: content
---
#include "Meson_project.h"

int main()
{
    return 0;
}

