tests/repositories/snapshots/meson_cpp/tests/meson_cpp.cpp.snap
---
source: tests/common/mod.rs
expression: content
---
#include "meson_cpp.h"

int main()
{
    return 0;
}
